<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DepositoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/deposito"
        android:background="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_depvapor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_insira_o_valor"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />
        <Button
            android:background="@color/teal_200"
            android:text="@string/depositar"
            android:id="@+id/btn_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_depvapor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:hint="@string/valor"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />
        <ListView
            android:id="@+id/lv_deposito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</RelativeLayout>
</layout>