<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SaqueFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/saque"
        android:background="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_sacar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_insira_o_valor"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />
        <Button
            android:background="@color/teal_200"
            android:text="@string/Sacar"
            android:id="@+id/btn_sac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ListView
            android:layout_marginTop="8dp"
            android:id="@+id/lv_sacar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
</layout>